k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
  namespace: three-tier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-backend
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
      - name: flask-backend
        image: 930487733034.dkr.ecr.ap-south-1.amazonaws.com/flask-backend:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
