k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: three-tier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 930487733034.dkr.ecr.ap-south-1.amazonaws.com/flask-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
