k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: three-tier
spec:
  selector:
    app: flask-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
