k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend-service
spec:
  type: LoadBalancer
  selector:
    app: flask-backend
  ports:
  - port: 80
    targetPort: 5000
